crates/ink/tests/ui/abi/sol/fail/derive-sol-encode-decode-enum-discriminants.stderr
error: can only derive `SolDecode` for Rust `enum` items that either have no variants with explicitly specified discriminants, or have explicitly specified discriminants for all variants
  --> tests/ui/abi/sol/fail/derive-sol-encode-decode-enum-discriminants.rs:7:1
   |
7  | / enum SimpleEnum {
8  | |     One = 1,
9  | |     Two,
10 | |     Three,
11 | | }
   | |_^

error: can only derive `SolEncode` for Rust `enum` items that either have no variants with explicitly specified discriminants, or have explicitly specified discriminants for all variants
  --> tests/ui/abi/sol/fail/derive-sol-encode-decode-enum-discriminants.rs:7:1
   |
7  | / enum SimpleEnum {
8  | |     One = 1,
9  | |     Two,
10 | |     Three,
11 | | }
   | |_^
